styles/styles.css
/* ... */
@media (width >= 900px) {
  :root {
    /* widths and heights */
    --horizontal-spacing: var(--spacing-xl);
  }
}

/* fallback fonts */
@font-face {
  font-family: poppins-fallback;
  size-adjust: 94.1%;
  ascent-override: 95%;
  descent-override: 20%;
  line-gap-override: 5%;
  src: local('Futura'), local('Century Gothic'), local('Arial');
}

@font-face {
  font-family: acumin-fallback;
  size-adjust: 88.8%;
  ascent-override: 90%;
  descent-override: 25%;
  line-gap-override: 5%;
  src: local('Arial Narrow'), local('Helvetica Condensed'), local('Arial');
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  background: var(--color-background);
}

body {
  display: none;
  margin: 0;
  font-family: var(--body-font-family);
  font-size: var(--body-size-m);
  line-height: var(--line-height-m);
  background-color: var(--layer-base);
  color: var(--color-text);
}

body.appear {
  display: block;
}

body[data-scroll='disabled'] {
  overflow-y: hidden;
}

body ::selection {
  background-color: yellow;
  color: var(--color-text);
}

header {
  position: fixed;
  min-height: var(--header-height);
  transition: height 0.2s, min-height 0.2s;
}

header,
header .header,
footer,
footer .footer {
  visibility: hidden;
}

header.appear,
header .header[data-block-status='loaded'],
footer.appear,
footer .footer[data-block-status='loaded'] {
  visibility: visible;
}

main {
  margin-top: calc(var(--header-height) + var(--horizontal-spacing));
}

main.home {
  margin-top: var(--header-height);
}

@media (width >= 900px) {
  body {
    min-height: 100dvh;
    font-style: normal;
  }
}

/* sections */
main > .section > div {
  max-width: var(--site-width);
  margin: var(--horizontal-spacing) auto;
  padding: 0 var(--horizontal-spacing);
}

/* section metadata */
main .section.light {
  background-color: var(--gray-100);
}

main .section.dark {
  background-color: var(--gray-600);
}

main .section.hero-header-l > div {
  display: flex;
  flex-flow: column;
  align-items: center;
  padding: var(--spacing-xxl) 0;
}

main .section.hero-header-l > div > h1 {
  font-size: var(--heading-size-xxxl);
}

main .section.hero-header > div {
  display: flex;
  justify-content: center;
  flex-flow: column;
  align-items: center;
  text-align: center;
  padding: var(--spacing-xxl) var(--horizontal-spacing);
}

@media (width >= 900px) {
  main .section.hero-header-l > div > h1 {
    font-size: var(--heading-size-xxxxl);
  }
  
  main .section.hero-header-l > div > p {
    font-size: var(--heading-size-m);
  }
}

/* images and icons */
p.img-wrapper {
  margin: 0;
  line-height: 0;
}

img {
  display: block;
  width: 100%;
  height: auto;
}

.icon {
  line-height: 0;
}

.icon svg,
.icon img {
  width: 1em;
  height: 1em;
  fill: currentcolor;
  color: currentcolor;
  transition: fill 0.2s;
}

i.symbol {
  display: inline-block;
  position: relative;
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

i.symbol::before,
i.symbol::after {
  content: '';
  position: absolute;
}

i.symbol.symbol-add,
i.symbol.symbol-subtract {
  width: 1rem;
}

i.symbol.symbol-add::before,
i.symbol.symbol-subtract::before,
i.symbol.symbol-add::after {
  background-color: currentcolor;
}

i.symbol.symbol-add::before,
i.symbol.symbol-subtract::before {
  top: 50%;
  left: 0;
  right: 0;
  transform: translateY(-50%);
  height: var(--border-m);
}

i.symbol.symbol-add::after {
  top: 0;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: var(--border-m);
}

i.symbol.symbol-loading {
  border: var(--border-m) solid;
  border-radius: 50%;
}

i.symbol.symbol-loading::after {
  inset: calc(-1 * var(--border-m));
  border: inherit;
  border-right-color: var(--color-link);
  border-radius: inherit;
  animation: loading 1.5s ease-in-out infinite;
}

@keyframes loading {
  from {
    transform: rotate(0deg)
  }

  to {
    transform: rotate(360deg)
  }
}

/* typography */
h1,
h2,
h3,
h4,
h5,
h6 {
  scroll-margin: 1em;
  font-family: var(--heading-font-family);
  font-weight: var(--weight-extrabold);
  line-height: var(--line-height-s);
  text-transform: lowercase;
  margin: 0;
  overflow-wrap: break-word;
}

h1 {
  font-size: var(--heading-size-xxl);
}

h2 {
  font-size: var(--heading-size-xl);
}

h3 {
  font-size: var(--heading-size-l);
}

h4 {
  font-size: var(--heading-size-m);
}

h5 {
  font-size: var(--heading-size-s);
}

h6 {
  font-size: var(--heading-size-xs);
}

p,
ol,
ul,
dl,
pre,
blockquote {
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

pre,
code,
kbd,
samp,
var {
  font-family: var(--code-font-family);
  font-size: var(--body-size-m);
}

pre {
  border-radius: var(--rounding-l);
  padding: var(--spacing-m);
  background-color: var(--layer-depth);
  overflow-x: auto;
}

pre::-webkit-scrollbar {
  height: 24px;
}

pre::-webkit-scrollbar-thumb {
  background-color: var(--gray-500);
  border: 8px solid var(--layer-depth);
  border-radius: 12px;
}

pre::-webkit-scrollbar-thumb:hover {
  background-color: var(--gray-600);
}

code,
kbd,
samp,
var {
  border-radius: var(--rounding-s);
  padding: 0 0.25em;
  background-color: var(--layer-depth);
}

sup {
  font-family: var(--body-font-family);
  line-height: 0;
  vertical-align: 0.1em;
}

.detail {
  margin-top: 1.125em;
  margin-bottom: 0.25em;
  line-height: var(--line-height-m);
}

.label {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5ch;
  font-size: var(--heading-size-xxxl);
}

.label .icon img,
.label .icon svg {
  width: var(--heading-size-xxxxl);
  height: var(--heading-size-xxxxl);
  margin-bottom: 0.5ch;
}

@media (width >= 600px) {
  .label {
    flex-flow: row wrap;
    align-items: flex-end;
  }

  .label .icon img,
  .label .icon svg {
    margin-bottom: 0;
  }
}

/* links */
a:any-link {
  color: var(--color-link);
  text-decoration: none;
  transition: color 0.2s;
}

a:hover {
  color: var(--color-link-hover);
  text-decoration: underline;
}
/* ... */

